# fox

./: .gitignore  .travis.yml  CMakeLists.txt  Changelog  FoX-config.in  FoX.vfproj  LICENSE  Makefile  README  README.FoX.txt  RELEASE  TODO  arch.make  arch.make.in  configure  dom_example.f90  m_handlers.f90  release.sh  sax_example.f90  test.cml  test.xml  test2.xml  testcheck.sh  vars_for_vs  wcml_example.f90  wxml_example.f90  xpath_example.f90
DoX/: AttributeDictionaries.html  AttributeDictionaries.md  Compilation.html  Compilation.md  Debugging.html  Debugging.md  Embedding.html  Embedding.md  FoX.html  FoX.md  FoX_DOM.md  FoX_DoX.html  FoX_common.html  FoX_common.md  FoX_dom.html  FoX_dom.md  FoX_sax.html  FoX_sax.md  FoX_utils.html  FoX_utils.md  FoX_wcml.html  FoX_wcml.md  FoX_wkml.html  FoX_wkml.md  FoX_wxml.html  FoX_wxml.md  Information.html  Information.md  Licensing.html  Licensing.md  Standards.html  Standards.md  StringConversion.html  StringConversion.md  StringFormatting.html  StringFormatting.md  TODO  Versioning.html  Versioning.md  install.html  (+6 more)
cmake/: CheckAbortIntrinsic.cmake  CheckAssociatedBug.cmake  CheckFlushIntrinsic.cmake
common/: CMakeLists.txt  FoX_common.F90  FoX_common.f90  TODO  m_common_array_str.F90  m_common_array_str.f90  m_common_attribute.f90  m_common_attrs.F90  m_common_attrs.f90  m_common_buffer.F90  m_common_buffer.f90  m_common_charset.F90  m_common_charset.f90  m_common_content_model.F90  m_common_element.F90  m_common_element.f90  m_common_elstack.F90  m_common_elstack.f90  m_common_entities.F90  m_common_entities.f90  m_common_entity_expand.F90  m_common_entity_expand.f90  m_common_error.F90  m_common_error.f90  m_common_format.F90  m_common_format.f90  m_common_format.m4  m_common_io.F90  m_common_io.f90  m_common_namecheck.F90  m_common_namecheck.f90  m_common_namespaces.F90  m_common_namespaces.f90  m_common_notations.F90  m_common_notations.f90  m_common_parse_input.F90  m_common_parse_input.m4  m_common_realtypes.f90  m_common_string.F90  m_common_string.f90  (+5 more)
config/: FoX-config.in  aclocal.m4  arch.make.in  config.guess  configure  configure.ac  makefile  xmlf90-config.sh.in
config/m4/: ACX_MPI.m4  TW_CHECK_BLACS.m4  TW_CHECK_SCALAPACK.m4  TW_FC_CHECK_ABORT.m4  TW_FC_CHECK_DCFUNS.m4  TW_FC_CHECK_EOL.m4  TW_FC_CHECK_FLUSH.m4  TW_FC_ID.m4  TW_FC_ID_FLAGS.m4  TW_FC_KINDS.m4  TW_FIND_FC_BLAS.m4  TW_FIND_LAPACK.m4  TW_TRY_DC_LAPACK.m4  ac_config_aux_dirs.m4  fortran.m4  lang.m4
docs/: Compilation.html  FoX_DoX.html  (+1 more)
dom/test/: CMakeLists.txt
sax/test/: CMakeLists.txt  Makefile  m_canonicalize.f90  run_tests.sh  sax_well_formed.ns.no.f90  sax_well_formed.ns.yes.f90  test.out  test.sh  test_sax_fsm_1.in  test_sax_fsm_1_utf16_bom.in  test_sax_fsm_1_utf8_bom.in  test_sax_parser_1.f90  test_sax_parser_1.out  test_sax_parser_2.f90  test_sax_parser_2.out  test_sax_parser_3.f90  test_sax_parser_3.out  test_sax_parser_6.f90  test_sax_parser_7.f90  test_sax_parser_7.out  test_sax_reader_1.f90  test_sax_reader_10.f90  test_sax_reader_10.out  test_sax_reader_11.f90  test_sax_reader_11.out  test_sax_reader_11a.in  test_sax_reader_12.f90  test_sax_reader_12.f90.fix  test_sax_reader_12.out  test_sax_reader_13.f90  test_sax_reader_13.f90.fix  test_sax_reader_13.in  test_sax_reader_13.out  test_sax_reader_13b.in  test_sax_reader_14.f90  test_sax_reader_14.f90.fix  test_sax_reader_14.in  test_sax_reader_14.out  test_sax_reader_14b.in  test_sax_reader_15.f90  (+9 more)
wkml/: CMakeLists.txt  FoX_wkml.f90  m_contours.F90  m_contours.f90  m_wkml_chart.f90  m_wkml_color.F90  m_wkml_color.f90  m_wkml_color_def.f90  m_wkml_contours.F90  m_wkml_contours.f90  m_wkml_core.f90  m_wkml_coverage.F90  m_wkml_coverage.f90  m_wkml_coverage.m4  m_wkml_coverage.tow.f90  m_wkml_features.F90  m_wkml_features.f90  m_wkml_lowlevel.F90  m_wkml_lowlevel.f90  m_wkml_styling.F90  m_wkml_styling.f90  makefile
wkml/test/: CMakeLists.txt  Makefile  run_tests.sh  test.sh  test_kmlAddInnerBoundary_0.out  test_kmlAddInnerBoundary_1.xml  test_kmlAddInnerBoundary_11.out  test_kmlAddInnerBoundary_13.out  test_kmlAddInnerBoundary_16.out  test_kmlAddInnerBoundary_6.xml  test_kmlColorMap_3.xml  test_kmlColorMap_4.out  test_kmlColorMap_5.out  test_kmlColorMap_8.out  test_kmlCreateLineStyle_1.xml  test_kmlCreateLineStyle_11.xml  test_kmlCreateLineStyle_12.xml  test_kmlCreateLineStyle_2.xml  test_kmlCreateLineStyle_3.xml  test_kmlCreateLineStyle_4.xml  test_kmlCreateLineStyle_5.xml  test_kmlCreateLine_1.xml  test_kmlCreateLine_10.xml  test_kmlCreateLine_12.out  test_kmlCreateLine_19.xml  test_kmlCreateLine_2.xml  test_kmlCreateLine_8.xml  test_kmlCreatePointStyle_1.xml  test_kmlCreatePointStyle_10.f90  test_kmlCreatePointStyle_10.xml  test_kmlCreatePointStyle_11.f90  test_kmlCreatePointStyle_11.out  test_kmlCreatePointStyle_12.xml  test_kmlCreatePointStyle_13.xml  test_kmlCreatePointStyle_14.out  test_kmlCreatePointStyle_15.xml  test_kmlCreatePointStyle_16.xml  test_kmlCreatePointStyle_17.f90  test_kmlCreatePointStyle_17.out  test_kmlCreatePointStyle_18.xml  (+38 more)
wxml/test/: CMakeLists.txt  Makefile  passed.sh  run_tests.sh  test.sh  test.xml  test_len_escaping_markup.f90.in  test_len_escaping_markup.sh  test_str.f90.in  test_str.sh  test_xml_AddAttribute.sh  test_xml_AddAttribute_0.f90  test_xml_AddAttribute_1.xml  test_xml_AddAttribute_2.f90  test_xml_AddAttribute_2.out  test_xml_AddAttribute_4.out  test_xml_AddAttribute_6.xml  test_xml_AddAttribute_7.xml  test_xml_AddAttribute_8.xml  test_xml_AddAttribute_9.f90  test_xml_AddAttribute_9.xml  test_xml_AddCdataSection.sh  test_xml_AddCharacters.sh  test_xml_AddCharacters_0.f90  test_xml_AddCharacters_1.xml  test_xml_AddCharacters_2.xml  test_xml_AddCharacters_3.xml  test_xml_AddCharacters_4.f90  test_xml_AddCharacters_overload_13.f90  test_xml_AddCharacters_overload_13.xml  test_xml_AddComment.sh  test_xml_AddComment_0.f90  test_xml_AddComment_1.f90  test_xml_AddComment_1.xml  test_xml_AddDOCTYPE_1.f90  test_xml_AddDOCTYPE_1.xml  test_xml_AddDOCTYPE_2.xml  test_xml_AddDOCTYPE_3.out  test_xml_AddDOCTYPE_4.xml  test_xml_AddExternalEntity_1.xml  (+99 more)
(+443 files in other folders)
