
#################################################################
# FoX DOM tests
#################################################################

FILE(GLOB_RECURSE TESTS_DOM_SRC *.f90 *.F90)


FOREACH(TEST_SRC ${TESTS_DOM_SRC})

    GET_FILENAME_COMPONENT(EXE_NAME ${TEST_SRC} NAME_WE)
    ADD_EXECUTABLE(${EXE_NAME} ${TEST_SRC})
    TARGET_LINK_LIBRARIES(${EXE_NAME} ${PROJECT_NAME}_dom)
    TARGET_LINK_LIBRARIES(${EXE_NAME} ${PROJECT_NAME}_sax)
    TARGET_LINK_LIBRARIES(${EXE_NAME} ${PROJECT_NAME}_common)
    TARGET_LINK_LIBRARIES(${EXE_NAME} ${PROJECT_NAME}_fsys)
    FOREACH (EXT_LIB ${EXT_LIBS})
        IF(DEFINED ${PROJECT_NAME}_ENABLE_${EXT_LIB} AND ${PROJECT_NAME}_ENABLE_${EXT_LIB} AND ${EXT_LIB}_FOUND)
            TARGET_LINK_LIBRARIES(${EXE_NAME} ${${EXT_LIB}_LIBRARIES})
        ENDIF()
    ENDFOREACH()
        ADD_CUSTOM_COMMAND(TARGET ${EXE_NAME} PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/wcml/test/test_cmlDumpDec_1.input ${PROJECT_BINARY_DIR}/wcml/test)
    ADD_TEST(${EXE_NAME}_TEST ${EXECUTABLE_OUTPUT_PATH}/${EXE_NAME})
ENDFOREACH()

